bugfix/ETSL-186 and 187 CSS fixes for Hero Video Banner Alignment issues
CSS changes for ETSL - 186 and 187 Hero Video Banner | Alignment issues in desktop, mobile and ipad.

--- a/ui.frontend/src/main/webpack/etisalat/_variables.scss
+++ b/ui.frontend/src/main/webpack/etisalat/_variables.scss
@@ -112,7 +112,10 @@ $green1:               #3a4035;
 $platinum-blue:        #606a85;
 $platinum-white:       #cddefb; 
 
-
+$bright-sun: #e6c035;
+$pumpkin: #f76b1c;
+$light-white-grey: #eaeaea;
+$white-grey: #e7e4e4;
 // main-menu and top-nav
 $light-gray:            #f2f2f2;
 $sub-menu-gray:         #ebebeb;
